Managed XML output

--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,6 @@ bootJar {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.5'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
