Added test, additional omplementation class, cap on maximum number reachable

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ bootJar {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile group: 'com.google.guava', name: 'guava', version: '25.0-jre'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.9.5'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
